# octoprint-octocarvera

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  setup.py
docs/: design.md  important_sources.md  machine_states.md  notable_behavior.md
extras/: skeleton.md
extras/github/: bug_report.yml  feature_request.yml
octocarvera/: __init__.py  carvera_binary.py  carvera_comm.py  carvera_files.py  carvera_protocol.py  carvera_xmodem.py
octocarvera/static/css/: octocarvera.css
octocarvera/static/js/: octocarvera.js
octocarvera/templates/: octocarvera_control.jinja2  octocarvera_files.jinja2  octocarvera_machine_status.jinja2  octocarvera_settings.jinja2  octocarvera_sidebar.jinja2  octocarvera_transfer.jinja2
tests/: test_carvera_binary.py  test_carvera_files.py  test_carvera_xmodem.py  test_grbl_parsing.py  test_plugin.py
translations/: README.txt
